--- a/SLAM/直接法前端.md
+++ b/SLAM/直接法前端.md
@@ -118,5 +118,43 @@ $$
 
 在直接法中，由于不计算描述子，不进行特征匹配，因此我们并没有特征点间的对应关系，即不知道第二张相片上哪一个点p2 对应着第一张相片上的p1。
 
-对此，直接法的**思路**为给位姿一个初始估计T（猜测），由当前的估计值来寻找p2 的位置。若给出的位姿估计很差，那么p2 的外观（亮度）会和p1 有明显区别。为了减小这个差别，我们不断调整相机位姿，来寻找和p1 更相似的p2。即通过**优化**的方法来求解T。
+对此，直接法的**思路**为给位姿一个初始估计T（猜测），由当前的估计值来寻找p2 的位置。若给出的位姿估计很差，那么p2 的外观（亮度）会和p1 有明显区别。为了减小这个差别，我们不断调整相机位姿，来寻找和p1 更相似的p2。即通过**优化**的方法来求解T。在这里，最小化的对象为**光度误差** (Photometric Error)：
+$$
+e = \mathbf{I}_1 (\mathbf{p}_1) - \mathbf{I}(\mathbf{p}_2)
+$$
 
+$$
+\min_{\xi} J(\xi) = ||e||^2
+$$
+
+直接法的**前提**仍然是灰度不变假设。假设我们跟踪N 个空间点P1, …, Pn，那么整体优化问题就成为：
+$$
+\min_{\xi} J(\xi) = \sum_{i=1}^N e_i^T e_i,\ e_i = \mathbf{I}_1(\mathbf{p}_{1, i}) - \mathbf{I}_2(\mathbf{p}_{2, i})
+$$
+注意到这里的优化变量是相机位姿$\xi$，且这是一个非线性优化的问题。自然，我们就需要求解光度误差e 对于相机位姿的导数。利用左乘扰动模型，有：
+$$
+\begin{align}
+e(\delta \xi \bigoplus \xi) & = \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} \exp(\delta \xi^{\wedge}) \exp(\xi^{\wedge}) \mathbf{P}) \\
+ & \approx \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} (\mathbf{I} + \delta \xi^{\wedge}) \exp(\xi^{\wedge}) \mathbf{P}) \\
+ & = \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} \exp(\xi^{\wedge})\mathbf{P} + \frac{1}{Z_2} \mathbf{K} \delta \xi^{\wedge} \exp(\xi^{\wedge}) \mathbf{P})
+\end{align}
+$$
+记
+$$
+\begin{align}
+\mathbf{q} & = \delta \xi \exp(\xi^{\wedge}) \mathbf{P} \\
+\mathbf{u} & = \frac{1}{Z_2} \mathbf{K} \mathbf{q}
+\end{align}
+$$
+这里，q 是**扰动分量**在**第二个相机坐标系**下的坐标，而u 为其像素坐标。这样式(17) 就可以写成：
+$$
+e(\delta \xi \bigoplus \xi)  = \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} \exp(\xi^{\wedge})\mathbf{P} + \mathbf{u})
+$$
+把等式右侧的第二项再次看成一个泰勒展开式，u 就是那个小量，就可以写成：
+$$
+\begin{align}
+e(\delta \xi \bigoplus \xi) & = \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} \exp(\xi^{\wedge})\mathbf{P} + \mathbf{u}) \\
+ & \approx \mathbf{I}_1(\frac{1}{Z_1} \mathbf{K} \mathbf{P}) - \mathbf{I}_2 (\frac{1}{Z_2} \mathbf{K} \exp(\xi^{\wedge}) \mathbf{P}) - \frac{\partial \mathbf{I}_2}{\partial \mathbf{u}} d\mathbf{u} \\
+ & = e(\xi) - \frac{\partial \mathbf{I}_2}{\partial \mathbf{u}} \frac{\partial \mathbf{u}}{\partial \mathbf{q}} \frac{\partial \mathbf{q}}{\partial \delta \xi} \cdot \delta \xi
+\end{align}
+$$
