--- a/SLAM/卡尔曼滤波：从入门到精通.md
+++ b/SLAM/卡尔曼滤波：从入门到精通.md
@@ -50,7 +50,7 @@ $$
 
 用一个在解释卡尔曼滤波时最常用的一维例子：小车追踪。如下图所示：
 
-【图】
+![草稿](草稿1.png)
 
 状态向量为小车的位置和速度：
 $$
@@ -134,7 +134,7 @@ $$
 
 预测更新实际上相当于“**加法**”：将当前状态转换到下一时刻（并增加一定不确定性），再把外界的干扰（运动测量值）叠加上去（又增加了一点不确定性）。
 
-【图】
+![草稿2](草稿2.png)
 
 上面即为卡尔曼滤波中预测这一步。这一步相对比较直观，推导也较测量更新简单，就只在这里详细给出了。
 
@@ -169,7 +169,7 @@ y_2(r; \mu_2, \sigma_2) = \frac{1}{\sqrt{2 \pi \sigma_2^2}} e ^{-\frac{(r - u_2)
 $$
 除了下标外，其余的字母的含义都和上面的式子一样。
 
-【图】
+![草稿3](草稿3.png)
 
 如上图琐事，现在在t 时刻，我们有了两个关于小车位置的估计。而我们所能得到的关于小测位置的**最佳估计**就是将预测更新和测量更新所得的数据**融合**起来，得到一个新的估计。而这个融合，就是一个简单的“**乘法**”，并利用了一个**性质**：两个高斯分布的乘积仍然是高斯分布。
 $$
@@ -190,12 +190,121 @@ $$
 \sigma_{fused} = \frac{1}{\frac{1}{\sigma_1} + \frac{1}{\sigma_2}} = \frac{\sigma_1 \sigma_2}{\sigma_1^2 + \sigma_2^2} = \sigma_1^2 - \frac{\sigma_1^4}{\sigma_1^2 + \sigma_2^2}
 $$
 
+![草稿4](草稿4.png)
+
 最右边的式子是为了后面的计算而准备的。
 
 本质上，这（高斯分布相乘）就是卡尔曼滤波中测量更新的全部了。
 
 那么， 怎么由上面两个简单的一维的式子得到前一节$\mathbf{\hat x}_t$ 和$\mathbf{P}_t$ 呢？一步一步来。
 
+###转换矩阵H 的引入
+
 在刚刚的一维情况的小例子中，我们其实做了一个隐式的**假设**，即有预测更新得到的位置的概率分布和测距仪所得的测量值具有相同的单位 (unit)，如米 (m)。
 
-但实际情况往往不是这样的，比如，测距仪给出的可能不是距离，而是信号的飞行时间（由仪器至小车的光的传播时间），单位为秒 (s)。这样的话，我们就无法直接
+但实际情况往往不是这样的，比如，测距仪给出的可能不是距离，而是信号的飞行时间（由仪器至小车的光的传播时间），单位为秒 (s)。这样的话，我们就无法直接如上面一般直接将两个高斯分布相乘了。
+
+此时，就该转换矩阵$\mathbf{H}_t$ 闪亮登场了。由于$r = c \cdot t$，c 为光速。所以此时$H_t = \frac{1}{c}$ （测量方程为$t = \frac{r}{c}$，可以回去参考一下式(4)）。
+
+预测值就要写为：
+$$
+y_1 (s; \mu_1, \sigma_1, c) = \frac{1}{\sqrt{2 \pi (\frac{\sigma_1}{c})^2}} e ^{-\frac{(s - \frac{\mu_1}{c})^2}{2 (\frac{\sigma_1}{c})^2}}
+$$
+而测量值保持不变：
+$$
+y_2(s; \mu_2, \sigma_2) = \frac{1}{\sqrt{2 \pi \sigma_2^2}} e ^{-\frac{(s - u_2)^2}{2 \sigma_2^2}}
+$$
+这样，两个高斯概率分布在转换矩阵H 的作用下又在同一个空间下了。根据前面$\mu_{fused}$ 和$\sigma_{fused}$ 的公式 （式(27) 和式(28)），可得：
+$$
+\frac{\mu_{fused}}{c} = \frac{\mu_1}{c} + \frac{(\frac{\sigma_1}{c})^2(\mu_2 - \frac{\mu_1}{c})}{(\frac{\sigma_1}{c})^2 + \sigma_2^2}
+$$
+将上式两端都乘以c 则可得：
+$$
+\mu_{fused} = \mu_1 + \frac{\frac{\sigma_1^2}{c}}{(\frac{\sigma_1}{c})^2 + \sigma_2^2} \cdot (\mu_2 - \frac{\mu_1}{c})
+$$
+由于$H = \frac{1}{c}$（这里转换矩阵H 不随时间变化而变化，所以把下标t 略去），并记$K = \frac{H \sigma_1^2}{H^2 \sigma_1^2 + \sigma^2_2}$，则上式可以写为：
+$$
+\mu_{fused} = \mu_1 + K (\mu_2 - H \mu_1)
+$$
+类似的有，
+$$
+\frac{\sigma^2_{fused}}{c^2} = (\frac{\sigma_1}{c})^2 - \frac{(\frac{\sigma_1}{c})^4}{(\frac{\sigma_1}{c})^2 + \sigma_2^2} \\
+$$
+两边乘以$c^2$ 有：
+$$
+\sigma^2_{fused} = \sigma^2_1 -\frac{\frac{\sigma_1^2}{c}}{(\frac{\sigma_1}{c})^2 + \sigma_2^2} \cdot \frac{\sigma_1^2}{c} = \sigma^2_1 - K H \sigma_1
+$$
+
+###推广至高维
+
+到了这一步，这个一维情况下卡尔曼滤波的测量更新步骤就已经彻底讲完了。剩下的就是将这个一维例子推广至高维空间中。其实大家仔细观察一下就会得到答案。
+
+- $\mu_{fused}$ 就是$\mathbf{\hat x}_t$，是测量更新后所得的状态向量；
+- $\mu_1$ 就是$\mathbf{\hat x}_{t|t-1}$，是t-1 时刻到t 时刻的小车的预测更新（或叫运动更新）后的状态向量；
+- $\mu_2$ 是$\mathbf{z}_t$，是测量值；
+- $\sigma_{fused}^2$ 在高维空间中为$\mathbf{P}_t$，为测量更新后，状态向量的协方差矩阵；
+- $\sigma_1^2$ 在高维空间中就成了协方差矩阵$\mathbf{P}_{t|t-1}$，是预测更新后状态向量的协方差矩阵；
+- $\sigma_2^2$ 是$\mathbf{R}_t$，是测量值的协方差矩阵；
+- H 就是$\mathbf{H}_t$ 了，高维空间中的转换矩阵。
+- 而最重要的，Kalman gain $K = \frac{H \sigma_1^2}{H^2 \sigma_1^2 + \sigma^2_2}$，在高维空间中就可以写为$\mathbf{K}_t = \mathbf{H}_t \mathbf{P}_{t|t-1} \cdot (\mathbf{H}_t \mathbf{P}_{t|t-1} \mathbf{H}^T_t + \mathbf{R}_t)^{-1}$。看着很复杂，但仔细对照的话就是把前面相迎的数据替换带入即可。
+
+最后，根据式(33) $\mu_{fused} = \mu_1 + K (\mu_2 - H \mu_1)$ 就可得：
+$$
+\mathbf{\hat x}_t = \mathbf{\hat x}_{t|t-1} + \mathbf{K}_t (\mathbf{z}_t - \mathbf{H}_t \mathbf{\hat x}_{t|t-1}) 
+$$
+根据$\sigma^2_{fused} = \sigma^2_1 - K H \sigma_1$ 就可得：
+$$
+\mathbf{P}_t  = \mathbf{P}_{t|t-1} - \mathbf{K}_t \mathbf{H}_t \mathbf{P}_{t|t-1}
+$$
+
+## 讨论
+
+至此，相信你已经明白了卡尔曼滤波的推导过程。而具体的问题就取决于你的建模了。如在上面的小车的例子中，
+$$
+\begin{align}
+\mathbf{F}_t & =\begin{bmatrix}
+1 & \Delta t \\
+0 & t
+\end{bmatrix},\\
+\mathbf{B}_t & = \begin{bmatrix}
+\frac{\Delta t^2}{2} \\ \Delta t
+\end{bmatrix} \\
+\mathbf{H}_t & = \frac{1}{c}
+\end{align}
+$$
+
+### 多问个为什么
+
+如果只关心卡尔曼滤波的推导和方程，到这里就可以停止啦。
+
+但推完卡尔曼滤波，我还有几个个为什么。知其然更要知其所以然。下面是我对于自己的疑惑学习、思考得到的解答，而且碍于表达能力，不敢说百分百正确。
+
+首先是对于预测更新。前面也说到了，预测更新相当于“加法”。这相对好理解一些。在t-1 时刻我们有了对于小车位置的一个估计，根据对小车速度（状态向量之一），小车的加速度（运动测量值）的建模，在辅以时间间隔，自然可以计算出小车在该时间间隔内的位移和速度增量，再将之叠加到原有的状态向量上即可。由于建模和测量的过程带有噪声，所以此时小车的位置估计的精度是下降的（方差增大）。
+
+那么为什么测量更新就是乘法而预测更新是加法呢？
+
+因为测量更新的依据是**贝叶斯法则**。在有了测量值之后，我们求小车位置的概率分布其实就是在求$P(\mathbf{x} | \mathbf{z})$。根据贝叶斯法则有：
+$$
+P(\mathbf{x} | \mathbf{z}) = \frac{P(\mathbf{z} | \mathbf{x}) P(\mathbf{x})}{P(\mathbf{z})}
+$$
+$P(\mathbf{x} | \mathbf{z})$ 是后验概率。直接求后验概率比较困难（为什么？）。假设就在这个一维的小车例子中，当我们得到一个距离测量值z，那么小车的位置可能是距离远点的-z 或z 的两个点上。对于二维就可能是一个圆，三维则是一个球。此时要精确地知道小车的位置（消除歧义），一则我们可以继续测量，二则需要额外的信息。这就使得求后验概率比较不划算。
+
+反观贝叶斯法则的右侧，此时我们已经有了先验概率$P(\mathbf{x})$，这是上一时刻的状态向量，并且我们也有了$P(\mathbf{z} | \mathbf{x})$，因为所得的测量值$\mathbf{z}_t = \mathbf{H}_t \mathbf{x}_t + \mathbf{v}_t$ 表达的就是在当前位置下，我们能得到的测量值，亦即贝叶斯中的似然。在$P(\mathbf{z})$ 为一个常数的情况下，最大化$P(\mathbf{z} | \mathbf{x}) P(\mathbf{x})$ 就得到了最优的$P(\mathbf{x} | \mathbf{z})$。
+
+既然测量更新是以贝叶斯公式为基础，那么反观预测更新，除了前面那个直观的解释之外，是不是也有一个概率上的解释呢？
+
+连续的高斯分布所表示的小车位置和预测更新我没找到（不好意思），但就离散情况的话还是有一个依据的，就是**全概率公式**。以下图为例，假设t-1 时刻，小车的位置分布概率如图所示，到了t 时刻，小车向前运动了3米（3个格子），但由于模型的不确定性和噪音，我们不能保证小车精确地向前走了3米，根据概率分布，我们可以假设小车有80%的概率往前走了3米，10%的概率往前走了两米，而另有10%的概率往前走了4米。
+
+![草稿5](草稿5.png)
+
+那么，在t 时刻，小车真的运动到了这个位置，其概率分布是怎样的呢？它既有可能是在距离该位置3米远的地方以0.8的概率运动到现在这个位置的，也有可能是以0.1 的概率从2或4米远的地方为初始位置的，根据全概率公式，可以表达为
+
+![草稿6](草稿6.png)
+$$
+P(z) = 0.8 \cdot 0.6 + 0.1 \cdot 0.2 + 0.1 \cdot 0.2 = 0.52
+$$
+类似地，t时刻下，小车运动后在其他位置上的概率也可以用权概率公式表达出来。当然，最后的计算结果还需要进行**归一化处理**。
+
+如果我们不断地减小每个方格的分辨率，并按照高斯分布给予每个方格一个概率值，并对小车运动也做如此的离散化处理，应该也是可以不断逼近连续的情况（个人猜想）。
+
+至此，关于卡尔曼滤波的个人浅见就到此为止了。精通还需要不断地实践，但希望读完本文，能让你对卡尔曼滤波有全面的了解。
