--- a/SLAM/卡尔曼滤波：从入门到精通.md
+++ b/SLAM/卡尔曼滤波：从入门到精通.md
@@ -50,7 +50,7 @@ $$
 
 用一个在解释卡尔曼滤波时最常用的一维例子：小车追踪。如下图所示：
 
-![草稿](草稿1.png)
+![KF](KF1.png)
 
 状态向量为小车的位置和速度：
 $$
@@ -134,7 +134,7 @@ $$
 
 预测更新实际上相当于“**加法**”：将当前状态转换到下一时刻（并增加一定不确定性），再把外界的干扰（运动测量值）叠加上去（又增加了一点不确定性）。
 
-![草稿2](草稿2.png)
+![KF2](KF2.png)
 
 上面即为卡尔曼滤波中预测这一步。这一步相对比较直观，推导也较测量更新简单，就只在这里详细给出了。
 
@@ -169,7 +169,7 @@ y_2(r; \mu_2, \sigma_2) = \frac{1}{\sqrt{2 \pi \sigma_2^2}} e ^{-\frac{(r - u_2)
 $$
 除了下标外，其余的字母的含义都和上面的式子一样。
 
-![草稿3](草稿3.png)
+![KF3](KF3.png)
 
 如上图琐事，现在在t 时刻，我们有了两个关于小车位置的估计。而我们所能得到的关于小测位置的**最佳估计**就是将预测更新和测量更新所得的数据**融合**起来，得到一个新的估计。而这个融合，就是一个简单的“**乘法**”，并利用了一个**性质**：两个高斯分布的乘积仍然是高斯分布。
 $$
@@ -190,7 +190,7 @@ $$
 \sigma_{fused} = \frac{1}{\frac{1}{\sigma_1} + \frac{1}{\sigma_2}} = \frac{\sigma_1 \sigma_2}{\sigma_1^2 + \sigma_2^2} = \sigma_1^2 - \frac{\sigma_1^4}{\sigma_1^2 + \sigma_2^2}
 $$
 
-![草稿4](草稿4.png)
+![KF4](KF4.png)
 
 最右边的式子是为了后面的计算而准备的。
 
@@ -250,7 +250,7 @@ $$
 
 最后，根据式(33) $\mu_{fused} = \mu_1 + K (\mu_2 - H \mu_1)$ 就可得：
 $$
-\mathbf{\hat x}_t = \mathbf{\hat x}_{t|t-1} + \mathbf{K}_t (\mathbf{z}_t - \mathbf{H}_t \mathbf{\hat x}_{t|t-1})
+\mathbf{\hat x}_t = \mathbf{\hat x}_{t|t-1} + \mathbf{K}_t (\mathbf{z}_t - \mathbf{H}_t \mathbf{\hat x}_{t|t-1}) 
 $$
 根据$\sigma^2_{fused} = \sigma^2_1 - K H \sigma_1$ 就可得：
 $$
@@ -295,11 +295,11 @@ $P(\mathbf{x} | \mathbf{z})$ 是后验概率。直接求后验概率比较困难
 
 连续的高斯分布所表示的小车位置和预测更新我没找到（不好意思），但就离散情况的话还是有一个依据的，就是**全概率公式**。以下图为例，假设t-1 时刻，小车的位置分布概率如图所示，到了t 时刻，小车向前运动了3米（3个格子），但由于模型的不确定性和噪音，我们不能保证小车精确地向前走了3米，根据概率分布，我们可以假设小车有80%的概率往前走了3米，10%的概率往前走了两米，而另有10%的概率往前走了4米。
 
-![草稿5](草稿5.png)
+![KF5](KF5.png)
 
 那么，在t 时刻，小车真的运动到了这个位置，其概率分布是怎样的呢？它既有可能是在距离该位置3米远的地方以0.8的概率运动到现在这个位置的，也有可能是以0.1 的概率从2或4米远的地方为初始位置的，根据全概率公式，可以表达为
 
-![草稿6](草稿6.png)
+![KF6](KF6.png)
 $$
 P(z) = 0.8 \cdot 0.6 + 0.1 \cdot 0.2 + 0.1 \cdot 0.2 = 0.52
 $$
