--- a/程序员的自我修养/第一章.md
+++ b/程序员的自我修养/第一章.md
@@ -157,4 +157,147 @@
 
 操作系统需要一定的数据结构来实现**进程的地址空间**到**物理内存空间**的**映射**，并跟踪物理内存的使用情况，以便在装入新的段的时候，合理地分配内存空间。
 
-1. 进程段表：包含*段号*和*段内索引*。
+1. 进程段表：包含*段号*和*段内索引*，描述组成进程地址空间的各段。
+
+   ![1350358845_5466](1350358845_5466.jpg)
+
+2. 系统段表：系统所有的占用段；
+
+3. 空闲段表：内存中的所有空闲段。
+
+为了完成进程虚拟地址到物理地址到映射，处理器查找内存中的段表，由段号得到段段首地址，加上段内地址，得到实际的物理地址。
+
+![1350281407_7063](1350281407_7063.png)
+
+#### 分页
+
+将程序的虚拟地址空间划分为固定大小的*页*，而物理内存划分为同样大小的*页框*。程序加载时，可将任意一页放入任意一个页框。
+
+**优点**：
+
+1. 没有外碎片，每个内碎片不超过页大小；
+2. 一个程序不必连续存放；
+3. 便于改变程序占用空间的大小。
+
+**缺点**：
+
+- 需要足够的内存来装在程序。
+
+##### 数据结构
+
+- 进程页表：完成逻辑页号到物理页号的映射；
+- 物理页表：描述物理内存空间的分配使用情况；
+- 请求表：描述系统内各个进程页表的位置和大小。
+
+CPU 中的内存管理单元（MMU）按逻辑页号通过进程页表得到物理页框号，加上页内地址就得到物理地址。
+
+### 线程
+
+**线程**是程序执行流的最小单元，一个标准的线程由线程ID、当前指令指针 (PC)、寄存器集合和堆栈组成。
+
+#### 访问权限
+
+线程可以访问进程内存里的所有数据，且还有自己的存储空间，包括：
+
+- 栈；
+- 线程局部存储 (TLS)；
+- 寄存器。
+
+![屏幕快照 2018-08-12 15.19.07](屏幕快照 2018-08-12 15.19.07.png)
+
+#### 线程调度与优先级
+
+在线程调度（在处理器上不断切换不同线程）中，有三种状态：
+
+- 运行；
+- 就绪：线程可执行，但CPU 被占用；
+- 等待：无法执行。
+
+运行中的线程有一段可执行之间，称为**时间片**，一旦用尽则进入就绪状态；若用尽之前就在等待某件事发生，则直接进入等待状态。
+
+主流调度方式：
+
+- 优先级调度：优先级高的线程更早执行。
+- 轮转法。
+
+一般把频繁等待的线程称为**IO 密集型线程**，很少等待的线程称为**CPU 密集型线程**。**IO 密集型线程总是比CPU 密集型线程容易得到优先级提升**。
+
+**饿死**：线程优先级较低，总是无法执行。
+
+操作系统会逐步提升等待时间过长、得不到执行的线程的优先级。
+
+线程用尽时间片进入就绪状态的过程称为**抢占**。在*不可抢占线程*执行的时候，线程调度的时机是确定的，线程调度只会发生在*线程主动放弃执行* 或*线程等待* 的时候。
+
+**写时复制**：两个任务可以同时**读取**内存。任意一个任务试图对内存进行修改是，系统会复制一份提供给修改方单独使用。
+
+#### 线程安全
+
+##### 竞争与原子操作
+
+某些操作，如自增 (++) 在被编译为汇编代码后不止一条指令，因此可能被打断。把单指令的操作称为**原子的**，因为其无法被打断。
+
+##### 同步与锁
+
+**同步** (synchronization)：一个线程访问数据未结束时，其它线程不得对同一个数据进行访问。
+
+**锁**：每个线程在访问数据前先试图获取锁，访问结束后释放锁。在锁被占用是试图获取锁会导致线程等待，直至锁重新可用。
+
+- **二元信号量** (Binary Semaphore)：占用与非占用。多元信号量（初始值为 N）允许 N 个线程并发访问：
+  - 获取信号量，信号量值 -1；
+  - 若值小于 0，则等待；
+  - 访问完释放信号量，值 +1；
+  - 若值小于1，唤醒一个等待线程。
+- **互斥量** (mutex)：信号量可以被某个线程获取后由另一个线程释放；互斥量要求**同一线程**完成获取和释放工作。
+- **临界区** (Critical Section)：一个进程创建了一个互斥量或信号量，另一个进程试图去获取是允许的。而临界区的作用范围只限于**本进程**。
+- **读写锁** (Read-Write Lock)：两种获取方式：**共享**或**独占**。线程获取锁后，若设置为共享，则其它线程可以以共享的方式获取锁和资源，想要独占则必须等待所有线程的释放；独占则会阻止其他线程获得该锁。
+- **条件变量** (Condition Variable)：线程**等待**条件变量，一个条件变量可以被多个线程所等待。线程可以**唤醒**条件变量，此时某个或所有等待此条件变量的线程都会被唤醒而继续执行。
+
+##### 可重入
+
+**重入** (reentrant)：函数未执行完成，因为内部调用或外部因素又进入该函数执行。
+
+**可重入**：函数被重入后不会产生任何不良后果。
+
+#### 过度优化
+
+CPU的动态调度可能交换指令的顺序。可以使用 `volate` 关键字试图防止过度优化：
+
+- 阻止编译器为了提高速度将一个变量缓存到寄存器而不写回；
+- 阻止编译器调整操作 `violate` 变量的指令顺序。
+
+`barrier()` 会阻止CPU 将该指令之前的指令交换到`barrier()` 后面。
+
+#### 线程模型
+
+用户使用的线程不是实际的内核线程，而是存在于用户态的**用户线程**。
+
+##### 一对一模型
+
+一个用户使用的线程对应一个内核线程。一般直接只用API 或系统调用创建的线程均为一对一线程。
+
+**优点**：
+
+- 用户线程和内核线程一致。
+
+**缺点**：
+
+- 内核线程数里有限；
+- 上下文切换开销较大。
+
+##### 多对一模型
+
+多个用户线程映射到一个内核线程。线程切换由用户态的代码来完成。
+
+**优点**：
+
+- 线程切换快；
+- 线程数量无限制。
+
+**缺点**：
+
+- 容易用户线程阻塞；
+- 处理器增加对该模型性能提升不显著。
+
+##### 多对多模型
+
+多个用户线程映射到少数但不止一个内核线程。
